# World-Sim-Cpp

./: .gitignore  Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  CMakeLists.txt  Dandelion.cpp  Dandelion.h  DeadlyNightshade.cpp  DeadlyNightshade.h  Fox.cpp  Fox.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Hogweed.cpp  Hogweed.h  Human.cpp  Human.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  README.md  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h  World.cpp  World.h  build_and_run.sh  main.cpp
